<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="e.shreypatel.momswarehousemanagementsystem.Inventory">

    <TextView
        android:textSize="25dp"
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SHOPPING LIST" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name of Item" />

    <EditText
        android:id="@+id/TFAddList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quantity" />

    <EditText
        android:id="@+id/quant_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bAddList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Item To Shopping List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bViewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Shopping List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <Button
        android:id="@+id/btnHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return to Homepage" />


</LinearLayout>
